--- a/RSub1/Base.lproj/Main.storyboard
+++ b/RSub1/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,142 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RSub1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SAVE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uzw-y3-fna">
+                                <rect key="frame" x="94" y="70" width="226" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SYSTEM FÜR ANONYME " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGB-Tm-kqn">
+                                <rect key="frame" x="39" y="135" width="336" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="VIRUS EINDÄMMUNG" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qka-Af-eHN">
+                                <rect key="frame" x="123" y="185" width="168" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b1V-lh-eXX">
+                                <rect key="frame" x="130" y="409" width="155" height="78"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <state key="normal" title="AKTIVIEREN">
+                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="activeButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pIL-JM-eV3"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Aktivieren Sie die App, um .." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffe-Xv-Qhf">
+                                <rect key="frame" x="100" y="636" width="214" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <segue destination="mp8-ge-QAf" kind="show" identifier="ShowTracker" id="1rd-YI-hPg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="138.61607142857142"/>
+        </scene>
+        <!--Tracker View Controller-->
+        <scene sceneID="cvm-WP-Hrx">
+            <objects>
+                <viewController id="mp8-ge-QAf" customClass="TrackerViewController" customModule="RSub1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1Qs-HX-oaX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SAVE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ea2-Do-AsO">
+                                <rect key="frame" x="167" y="15" width="80" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="NYL-me-uRh"/>
+                                    <constraint firstAttribute="height" constant="50" id="VEv-MA-4zf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SYSTEM FÜR ANONYME VIRUS EINDÄMMUNG" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ldM-hh-pU6">
+                                <rect key="frame" x="121" y="74" width="172" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="172" id="HTl-d5-jpr"/>
+                                    <constraint firstAttribute="height" constant="72" id="vUD-Oh-9gN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="kBO-SZ-D9l">
+                                <rect key="frame" x="87" y="196" width="240" height="194.5"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="198" id="9Ok-aM-iEK"/>
+                                    <constraint firstAttribute="width" constant="240" id="PuO-jh-bZx"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mWZ-R7-yuc">
+                                <rect key="frame" x="40" y="736" width="334" height="30"/>
+                                <state key="normal" title="Gefährdungslage hoch"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XCY-VE-X33">
+                                <rect key="frame" x="40" y="698" width="334" height="30"/>
+                                <state key="normal" title="Keine Gefährdung erkannt"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qD8-vK-kYN">
+                                <rect key="frame" x="40" y="660" width="334" height="30"/>
+                                <state key="normal" title="Tracking aktiv"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ygc-bq-Hol" firstAttribute="trailing" secondItem="mWZ-R7-yuc" secondAttribute="trailing" constant="40" id="5uc-yu-O9z"/>
+                            <constraint firstItem="Ea2-Do-AsO" firstAttribute="top" secondItem="ygc-bq-Hol" secondAttribute="top" constant="15" id="8S8-et-0aC"/>
+                            <constraint firstItem="ygc-bq-Hol" firstAttribute="bottom" secondItem="mWZ-R7-yuc" secondAttribute="bottom" constant="42" id="AQa-BP-ln2"/>
+                            <constraint firstItem="ldM-hh-pU6" firstAttribute="top" secondItem="Ea2-Do-AsO" secondAttribute="bottom" constant="9" id="Kmg-XU-FY0"/>
+                            <constraint firstItem="qD8-vK-kYN" firstAttribute="leading" secondItem="ygc-bq-Hol" secondAttribute="leading" constant="40" id="QDs-jO-QfG"/>
+                            <constraint firstItem="XCY-VE-X33" firstAttribute="top" secondItem="qD8-vK-kYN" secondAttribute="bottom" constant="8" id="Rai-Dd-Gh3"/>
+                            <constraint firstItem="XCY-VE-X33" firstAttribute="leading" secondItem="ygc-bq-Hol" secondAttribute="leading" constant="40" id="Rsa-tm-f4d"/>
+                            <constraint firstItem="mWZ-R7-yuc" firstAttribute="top" secondItem="XCY-VE-X33" secondAttribute="bottom" constant="8" id="U3n-UV-oui"/>
+                            <constraint firstItem="ygc-bq-Hol" firstAttribute="trailing" secondItem="qD8-vK-kYN" secondAttribute="trailing" constant="40" id="Uqi-iX-nE4"/>
+                            <constraint firstItem="mWZ-R7-yuc" firstAttribute="leading" secondItem="ygc-bq-Hol" secondAttribute="leading" constant="40" id="aLX-fB-Y9n"/>
+                            <constraint firstItem="Ea2-Do-AsO" firstAttribute="centerX" secondItem="ygc-bq-Hol" secondAttribute="centerX" id="bt4-hY-Iy6"/>
+                            <constraint firstItem="kBO-SZ-D9l" firstAttribute="centerX" secondItem="ygc-bq-Hol" secondAttribute="centerX" id="csC-3K-yKt"/>
+                            <constraint firstItem="kBO-SZ-D9l" firstAttribute="top" secondItem="ldM-hh-pU6" secondAttribute="bottom" constant="48" id="k1j-AR-hTm"/>
+                            <constraint firstItem="ldM-hh-pU6" firstAttribute="centerX" secondItem="ygc-bq-Hol" secondAttribute="centerX" id="pdW-gB-1Ap"/>
+                            <constraint firstItem="ygc-bq-Hol" firstAttribute="trailing" secondItem="XCY-VE-X33" secondAttribute="trailing" constant="40" id="vvo-nL-T8n"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ygc-bq-Hol"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Rp6-76-zqI"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VL0-5s-JfO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="953.62318840579712" y="138.61607142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="checkmark" catalog="system" width="64" height="56"/>
+    </resources>
 </document>
